// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<MapContainer
  center={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
  maxBounds={
    Array [
      Array [
        300,
        -300,
      ],
      Array [
        -300,
        300,
      ],
    ]
  }
  maxZoom={4}
  minZoom={1}
  whenCreated={[Function]}
  zoom={1}
>
  <ForwardRef(LeafComponent)
    attribution="<a href='https://www.tokyodisneyresort.jp/tds/map.html' target='_blank'>【公式】マップ | 東京ディズニーシー</a>"
    noWrap={true}
    url="/tds-map-tiles/{z}/{x}/{y}.png"
  />
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="000"
    map={Object {}}
    popup={
      <ForwardRef(Typography)>
        title
      </ForwardRef(Typography)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</MapContainer>
`;

exports[`Shallow Snapshot Tests when currentPosition state is setted 1`] = `
<MapContainer
  center={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
  maxBounds={
    Array [
      Array [
        300,
        -300,
      ],
      Array [
        -300,
        300,
      ],
    ]
  }
  maxZoom={4}
  minZoom={1}
  whenCreated={[Function]}
  zoom={1}
>
  <ForwardRef(LeafComponent)
    attribution="<a href='https://www.tokyodisneyresort.jp/tds/map.html' target='_blank'>【公式】マップ | 東京ディズニーシー</a>"
    noWrap={true}
    url="/tds-map-tiles/{z}/{x}/{y}.png"
  />
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="000"
    map={Object {}}
    popup={false}
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</MapContainer>
`;

exports[`Shallow Snapshot Tests with onClickPostTitle props 1`] = `
<MapContainer
  center={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
  maxBounds={
    Array [
      Array [
        300,
        -300,
      ],
      Array [
        -300,
        300,
      ],
    ]
  }
  maxZoom={4}
  minZoom={1}
  whenCreated={[Function]}
  zoom={1}
>
  <ForwardRef(LeafComponent)
    attribution="<a href='https://www.tokyodisneyresort.jp/tds/map.html' target='_blank'>【公式】マップ | 東京ディズニーシー</a>"
    noWrap={true}
    url="/tds-map-tiles/{z}/{x}/{y}.png"
  />
  <MapMarker
    autoOpen={false}
    draggable={false}
    key="000"
    map={Object {}}
    popup={
      <ForwardRef(Button)
        variant="text"
      >
        title
      </ForwardRef(Button)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</MapContainer>
`;
